# Hackathon_Unimi

./: Dockerfile  GCP.ipynb  README.md  predict.py  pyproject.toml  run.sh
api/: predict.ipynb  run.sh
api/api/: main.py
