[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Emanuele Guidotti <emanuele.guidotti@unine.ch>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.7"
scikit-learn = "1.0"
uvicorn = "^0.22.0"
fastapi = "^0.95.2"
pandas = "^1.1.5"
jvm = "^0.5.0b7"
h2o="^3.40.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
